--- a/MvcCoreDeployment/Views/Home/Index.cshtml
+++ b/MvcCoreDeployment/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Deployment CI/CD</h1>
-    <h2 style="color:red">@ViewData["SALUDO"]</h2>
-    <img src="~/images/batman.jpg" style="width: 90px; height: 90px"/>
+    <h2 style="color:blue">@ViewData["SALUDO"]</h2>
+    <img src="~/images/joker.jpg" style="width: 120px; height: 120px"/>
     <ul class="list-group">
         @foreach (int num in Model)
         {
